# weewm

./: AUTHORS  BUGS  ChangeLog  FAQ  FAQ.fr  INSTALL  Makefile  Makefile.am  NEWS  README  TODO  configure.in  weewm.1  weewm.spec
debian/: changelog  control  copyright  docs  examples  files  rules  weewm.substvars
doc/: weewm_en.texi  weewm_fr.texi
examples/: config.rc  keys.rc
src/: Makefile  Makefile.am  client.c  client.h  config.c  config.h  depend  events.c  events.h  info.c  info.h  memorize.c  memorize.h  screen.c  screen.h  weeconfig.c  weeconfig.h  weewm.c  weewm.h
