# Copyright (c) 2004 FlashCode <flashcode@flashtux.org>
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
#

#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.56)
AC_INIT(WeeWM, 0.0.3-pre2, flashcode@flashtux.org)
AC_CONFIG_SRCDIR([src/weewm.c])
AC_CONFIG_HEADER([config.h])
AM_INIT_AUTOMAKE([weewm], [0.0.3-pre2])

# Checks for programs.
AC_PROG_CC
AC_PROG_MAKE_SET

# Checks for libraries.
AC_CHECK_LIB([X11], XOpenDisplay)

# Checks for header files.
AC_PATH_X
AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h string.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_PID_T

# Checks for library functions.
AC_FUNC_FORK
AC_FUNC_MALLOC
AC_CHECK_FUNCS([mkdir putenv strcasecmp strchr strdup strncasecmp strpbrk])

AH_VERBATIM([DEBUG], [#undef DEBUG])
AC_ARG_ENABLE(debug, [ --enable-debug         Turn on debugging messages (default=no)],enable_debug=yes,enable_debug=no)
if test "x$enable_debug" = "xyes" ; then
    AC_DEFINE(DEBUG)
fi

CFLAGS="-Wall -W -pedantic -pipe -O2"
X11_CFLAGS="-I/usr/X11R6/include"
X11_LIBS="-L/usr/X11R6/lib -lX11"
AC_SUBST(X11_CFLAGS)
AC_SUBST(X11_LIBS)

AC_OUTPUT([Makefile
           src/Makefile])

echo
echo ====== WeeWM $VERSION configuration: ======
echo
echo Print debugging messages...... : $enable_debug
echo
eval eval echo WeeWM will be installed in $bindir.
echo
echo configure complete, now type \'make\' to build WeeWM
echo